Fixes failed tests
Signed-off-by: Darshit Chanpura <dchanp@amazon.com>